# rouch-tg

./: .env.example  .gitignore  CONFIGURATION_IMPROVEMENTS.md  LANGGRAPH_MIGRATION.md  MISSING_INTEGRATIONS.md  Makefile  PROBLEM_RESOLVER.md  PROJECT_REVIEW.md  PYDANTIC_AI_INTEGRATION.md  QUICKSTART.md  README.md  SQLALCHEMY_ALEMBIC_FIXES.md  TERMS_GENERATION_PROMPTS.md  TEST_CHECKLIST.md  TIMEZONE_FIX.md  VERIFICATION_REPORT.md  docker-compose.yml  ngrok.yml  pyproject.toml  yoga-concepts.md  yoga-mantras-visualizations.md
backend/: .env.example  Dockerfile  Dockerfile.prod  Dockfile.prod  alembic.ini  pyproject.toml  requirements.txt  test_ai.py
backend/alembic/: README_MIGRATIONS.md  env.py
backend/alembic/versions/: .gitkeep  20260129_0001_initial.py  2026_02_04_0426-57fe60c447dd_add_problem_history_table.py  2026_02_04_0452-97bde2a72b35_add_daily_suggestions_model.py  2026_02_05_2321-e12843301bc3_change_date_fields.py  2026_02_09_0000-add_karma_project_tables.py  2026_02_19_0000-add_universal_partner_fields.py  2026_02_19_0001-create_karma_plan_partners_table.py  2026_02_19_0002-add_isolation_and_contact_type.py  2026_02_24_0128-c56f551755dc_add_diagnostic_json_to_problem_history.py  2026_02_24_0243-3a06f1e01ddc_remove_is_active_from_problem_history.py  2026_02_24_0355-d52c14c4bda0_add_message_snapshot_to_daily_plans.py  2026_02_25_1821-88d01c711cdb_add_message_log_and_drop_message_.py  2026_02_25_1952-197b7cb8a67a_extract_daily_tasks_and_link_seeds.py  2026_02_26_0107-dba077286716_add_partner_and_action_type_to_daily_.py  2026_02_26_0338-4512945064a7_remove_daily_suggestions.py  2026_02_27_0009-7e220614872f_practiсу_progress.py  2026_02_27_1754-ad8042a6424c_practices_habits_refactor_drop_habits_.py  2026_02_27_2234-c5b53de4dc19_add_coffee_meditation_tables.py  2026_02_28_0345-32bd8f5aeb59_hybrid_auth_fastapi_users.py  2026_02_28_0432-399c45a5f97c_add_composite_indexes_for_query_.py  2026_03_01_0128-417d3acb4b9b_add_timezone_to_all_datetime_columns.py  2026_03_01_0205-e0f26ced8de8_add_account_link_tokens_and_link_prompt_.py  2026_03_06_0054-a03c6a6c46e7_link_prompt_snooze_until.py  2026_03_06_0154-dd26acad5f42_update_foreng_keys.py
backend/app/: __init__.py  cache.py  coffee_meditation.py  config.py  crud.py  crud_extended.py  database.py  main.py  mock_bot.py  telegram_auth.py  telegram_utils.py
backend/app/agents/: __init__.py  daily_manager.py  problem_solver.py  quote_provider.py
backend/app/ai/: __init__.py  daily_agent.py  diagnostic_agent.py  groq_agent.py  models.py  problem_agent.py
backend/app/api/: bot.py  calendar.py  deps.py  webapp.py
backend/app/api/endpoints/: __init__.py  account.py  coffee.py  daily.py  me.py  onboarding.py  partners.py  practices.py  problems.py  projects.py  seeds.py
backend/app/api/middleware/: typing_middleware.py
backend/app/auth/: __init__.py  database.py  jwt_backend.py  telegram_backend.py  user_manager.py
backend/app/core/: __init__.py  error_handler.py  exceptions.py
backend/app/email/: __init__.py  service.py
backend/app/email/templates/: base.html  link_account.html  reset_password.html  verify_email.html  welcome.html
backend/app/knowledge/: __init__.py  cache_decorator.py  embeddings.py  init_knowledge.py  loader.py  qdrant.py  qdrant_client.py
backend/app/models/: __init__.py  db_models.py  knowledge.py  partner.py  seed.py  user.py
backend/app/models/db/: __init__.py  account_link.py  base.py  coffee.py  daily.py  karma_plan.py  langgraph.py  message_log.py  partner.py  practice.py  problem.py  seed.py  user.py
backend/app/models/schemas/: user.py
backend/app/repositories/: __init__.py  base.py  daily.py  karma_plan.py  message_log.py  partner.py  practice.py  problem.py  seed.py  user.py
backend/app/scheduler/: __init__.py  daily_messages.py
backend/app/services/: __init__.py  account_link.py  account_merge.py  daily_service.py  partner_service.py  practice_service.py  seed_service.py  user_service.py
backend/app/utils/: typing_loader.py
backend/app/workflows/: __init__.py  daily_flow.py  onboarding.py  problem_flow.py
books/: diamond.md  karma.md  yoga.md  Карма любви- 2018.epub
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
terms/: concepts.csv  diamond-concepts.md  diamond-correlations-extended.md  diamond-correlations-table.md  diamond-quotes.md  karma-concepts.md  karma-mindmap.md  karma-quotes.md  partners.md  practices.csv  rules.csv  yoga-checklist.md
(+39 files in other folders)
