[project]
name = "rouch-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.133.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic-ai==1.66.0",
    "langgraph==1.0.9",
    "sqlalchemy==2.0.47",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "qdrant-client==1.17.0",
    "redis==7.2.1",
    "aiogram==3.25.0",
    "groq==1.0.0",
    "openai==2.24.0",
    "google-generativeai==0.8.6",
    "python-dotenv==1.2.1",
    "apscheduler==3.11.2",
    "python-multipart==0.0.22",
    "sentence-transformers==5.2.3",
    "torch>=2.0.0",
    "langgraph-checkpoint-postgres==3.0.4",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.6.2",
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ------------------- RUFF -------------------

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "E4",      # Pycodestyle: Import formatting issues (e.g. multiple imports on one line)
    "E7",      # Pycodestyle: Statement-related issues (e.g. multiple statements on one line)
    "E9",      # Pycodestyle: Runtime errors (e.g. syntax errors, indentation errors)
    "F",       # Pyflakes: Static analysis for unused imports, undefined names, etc.
    "B",       # flake8-bugbear: Best practices and likely bugs
    "RUF013",  # Ruff-specific rule: Implicit `Optional` detected (type hint clarity)
    "T",       # flake8-debugger: Debugging statements like `pdb` or `print` in code
    "ARG001",  # unused arguments in functions
    "E",       # pycodestyle errors
#    "W",       # pycodestyle warnings
#    "I",       # isort
    "UP",      # pyupgrade
]
ignore = [
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "preserve"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# ------------------- MYPY -------------------

[tool.mypy]
# Move these to the top and ensure they're properly applied
explicit_package_bases = true
namespace_packages = true
#follow_imports = "silent"

# Then your existing settings
python_version = 3.13

warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true
show_error_codes = true

plugins = ["pydantic.mypy"]

[tool."pydantic-mypy"]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

mypy_path = "."
exclude = [
    'venv',
    '.venv',
]

[[tool.mypy.overrides]]
ignore_errors = true
module = ["alembic.versions.*", "app.db.migrations.*", "app.lib.dto.*"]

# ------------------- PYTEST -------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
